2008-06-25  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidThrowingBasicExceptionsRule.cs: Extract common code into
	NewExceptionRule abstract class.
	* DoNotThrowReservedExceptionRule.cs: New. Rule to check if 
	reserved exceptions types are created inside methods.
	* NewExceptionRule.cs: New. Abstract base class for both 
	AvoidThrowingBasicExceptionsRule and DoNotThrowReservedExceptionRule
	* Gendarme.Rules.Exceptions.mdp: Update MD project file.
	* Makefile.am: Add rule and tests to the build.

2008-05-26  Daniel Abramov <ex@vingrad.ru> 

	* AvoidThrowingBasicExceptions.cs: New. Rule to ensure
	that specific types of exceptions are used instead of basic ones.
	* Gendarme.Rules.Exceptions.mdp, Gendarme.Rules.Exceptions.csproj:
	Add rule to project files.
	* Makefile.am: Add rule and tests to the build.

2008-05-19  Andres G. Aragoneses <aaragoneses@novell.com> 

	* DoNotDestroyStackTraceRule.cs: Revert r103436 (the last case wasn't
	  checked this way), definitely I need some sleep...

2008-05-19  Andres G. Aragoneses <aaragoneses@novell.com> 

	* DoNotDestroyStackTraceRule.cs: Tiny optimization. I would become nuts
	  if this is not correct because it's so simple (however I cannot
	  test it because of some exception http://monoport.com/12016 I'm
	  getting... :-? Probably I need SVN mono).

2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Gendarme.Rules.Exceptions.mdp: Fix references.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotDestroyStackTraceRule.cs: More refactoring. Use Initialize
	to void_reference. Reuse executionPaths collection. Adjust to SHE 
	changes.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotDestroyStackTraceRule.cs: Adapt to SEH* changes.
	* ISEHCatchBlock.cs, ISEHGuardedBlock.cs, ISEHHandlerBlock.cs: 
	Removed interfaces.
	* Makefile.am: Remove unneeded/removed files.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>
